support quadratic initialization for diffusion sampling

--- a/config/net_config/grasp_diffusion_quad_init.yaml
+++ b/config/net_config/grasp_diffusion_quad_init.yaml
@@ -24,5 +24,6 @@ modules:
         num_points: 10
         t_emb_dim: 8
         feature_dim: 16
-        init_method: gaussian
-        
+        init_method: quad
+        num_points_fit: 20
+        thres_dist: 20
