--- a/config/net_config/grasp_diffusion_v2.yaml
+++ b/config/net_config/grasp_diffusion_v2.yaml
@@ -10,6 +10,7 @@ modules:
         model: point_res_enc
         mlp_dims: [3, 16, 32, 64, 64, 128]
         fc_dims: [128, 64, 16]
+        faiss: 1
     vox_enc:
         model: spcnn_down2
         dims: [16, 32, 8]
