--- a/config/net_config/grasp_diffusion_v2_MSE.yaml
+++ b/config/net_config/grasp_diffusion_v2_MSE.yaml
@@ -25,6 +25,6 @@ modules:
         t_emb_dim: 8
         feature_dim: 16
         init_method: quad
-        num_points_fit: 20
+        num_points_fit: 50
         thres_dist: 20
-        loss_mode: CD
+        loss_mode: MSE
