--- a/config/net_config/grasp_diffusion_v2_quad.yaml
+++ b/config/net_config/grasp_diffusion_v2_quad.yaml
@@ -2,8 +2,8 @@ architecture: diffusion
 modules:
     dus: 2
     entropy_bottleneck: 8
-    scaling_ratio: -1 # key param
-    point_mul: -1 # key param
+    scaling_ratio: 0.125 # key param
+    point_mul: 10 # key param
     skip_mode: -1 # key param
     noise: 0.125
     res_enc:
@@ -26,6 +26,7 @@ modules:
         t_emb_dim: 8
         feature_dim: 16
         init_method: quad
-        num_points_fit: 20
+        num_points_fit: 50
         thres_dist: 20
+        sample_radius: 2
         loss_mode: CD
