--- a/config/net_config/grasp_quad_res.yaml
+++ b/config/net_config/grasp_quad_res.yaml
@@ -1,7 +1,7 @@
 # network configuration for GRASP-Net, down-up scale 2
 
 ---
-architecture: grasp
+architecture: grasp_quad
 modules:
     dus: 2
     entropy_bottleneck: 8
@@ -9,6 +9,9 @@ modules:
     point_mul: -1 # key param
     skip_mode: -1 # key param
     noise: 0.125
+    fit_num: 30
+    fit_radius: 20
+    sample_radius: 5
     res_enc:
         model: point_res_enc
         mlp_dims: [3, 16, 32, 64, 64, 128]
