--- a/config/net_config/grasp_diffusion_jointly_gaussian.yaml
+++ b/config/net_config/grasp_diffusion_jointly_gaussian.yaml
@@ -1,7 +1,4 @@
-# network configuration for GRASP-Net, down-up scale 2
-
----
-architecture: grasp_quad
+architecture: diffusion
 modules:
     dus: 2
     entropy_bottleneck: 8
@@ -9,18 +6,10 @@ modules:
     point_mul: 10 # key param
     skip_mode: -1 # key param
     noise: 0.125
-    fit_num: 30
-    fit_radius: 20
-    sample_radius: 5
     res_enc:
         model: point_res_enc
         mlp_dims: [3, 16, 32, 64, 64, 128]
         fc_dims: [128, 64, 16]
-        residual_mode: quad_fitting
-        fit_num: 30
-        fit_radius: 20
-        sample_radius: 3
-        matching_algorithm: assignment
     vox_enc:
         model: spcnn_down2
         dims: [16, 32, 8]
@@ -28,5 +17,15 @@ modules:
         model: spcnn_up2
         dims: [8, 64, 32]
     res_dec:
-        model: mlpdecoder_sparse
-        dims: [-1, 128, 128, 64]
+        model: diffusion_decoder_v2
+        diffusion_mode: jointly
+        training_steps: 200
+        beta_1: 0.0001
+        beta_T: 0.05
+        num_points: 10
+        t_emb_dim: 8
+        feature_dim: 16
+        init_method: gaussian
+        num_points_fit: 50
+        thres_dist: 20
+        loss_mode: CD
